[bdist_wheel]
# use py2.py3 tag for pure-python dist:
universal=1

[metadata]
description_file = README.md

#; [flake8]
#; # consistent with black
#; max-line-length = 88
#; extend-ignore = E203, W503
#
#; [isort]
#; # consistent with black
#; multi_line_output = VERTICAL_HANGING_INDENT
#; include_trailing_comma = True
#; force_grid_wrap = 0
#; use_parentheses = True
#; ensure_newline_before_comments = True
#; line_length = 88
